fix: responsive gaps in pets section

--- a/shelter/assets/css/style.scss
+++ b/shelter/assets/css/style.scss
@@ -250,7 +250,16 @@ body {
 
         @media screen and (max-width: 767px) {
             visibility: hidden;
+            position: absolute;
+            overflow: hidden;
+            top: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            z-index: 50;
+            height: 100%;
             width: 0;
+            transition: all 0.5s;
         }
     }
 
@@ -281,7 +290,7 @@ body {
 
     @media screen and (max-width: 767px) {
         gap: unset;
-        padding: 26px 53px 30px 10px;
+        padding: 30px 53px 30px 10px;
     }
 }
 
@@ -471,6 +480,7 @@ body {
     }
 
     @media screen and (max-width: 767px) {
+        flex-flow: column;
         align-items: center;
         gap: 40px;
         padding: 14px 10px 0;
