--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -240,6 +240,14 @@
                 background-image: url('../../assets/icons/sleeping-area.svg');
             }
 
+            &:last-child {
+                display: none;
+
+                @media screen and (max-width: 767px) {
+                    display: block;
+                }        
+            }
+
             &-title {
                 padding-top: 87px;
                 @include all.h4;
@@ -276,8 +284,7 @@
         }
 
         @media screen and (max-width: 767px) {
-            justify-content: space-between;
-            gap: 30px calc(25% - 50px);
+            gap: 30px calc(33.3% - 67px);
         }
     }
 
